fix: 별 붙은 날짜 자료구조를 Set에서 List로 수정